syntax = "proto3";

import "global.proto";
import "jwt.proto";

package pb;

message GetUserByIDOrEmailRequest {
  BaseRequest base = 1;
  int64 id = 2;
  string email = 3;
}

message CreateUserRequest {
  BaseRequest base = 1;
  string email = 2;
  string kdf_salt = 3;
  string mnemonic_master_key = 4;
  string mnemonic_master_iv = 5;
  string wordlist_master_key = 6;
  string wordlist_master_iv = 7;
  string mnemonic = 8;
  string mnemonic_iv = 9;
  string wordlist = 10;
  string wordlist_iv = 11;
  string public_key_0 = 12;

  string salutation = 14;
  string forename = 15;
  string lastname = 16;
  string address = 17;
  string zip_code = 18;
  string city = 19;
  string state = 20;
  string country_code = 21;
  string nationality = 22;
  string mobile_nr = 23;
  int64 birth_day = 24;
  string birth_place = 25;

  string password = 26;
  string mail_confirmation_key = 27;
  int64 mail_confirmation_expiry = 28;
  string tfa_temp_secret = 29;

  string additional_name = 30;
	string birth_country_code = 31;
	string bank_account_number = 32;
	string bank_number = 33;
	string bank_phone_number = 34;
	string tax_id = 35;
	string tax_id_name = 36;
  string occupation_name = 37;
  string occupation_code08 = 38;
  string occupation_code88 = 39;
	string employer_name = 40;
	string employer_address = 41;
	string language_code = 42;
}

message UserProfileResponse {
  int64 id = 1;
  string email = 2;
  string salutation = 3;
  string forename = 4;
  string lastname = 5;
  string address = 6;
  string zip_code = 7;
  string city = 8;
  string state = 9;
  string country_code = 10;
  string nationality = 11;
  string mobile_nr = 12;
  int64 birth_day = 13;
  string birth_place = 14;
  string additional_name = 16;
	string birth_country_code = 17;
	string bank_account_number = 18;
	string bank_number = 19;
	string bank_phone_number = 20;
	string tax_id = 21;
	string tax_id_name = 22;
  string occupation_name = 23;
  string occupation_code08 = 24;
  string occupation_code88 = 25;
	string employer_name = 26;
	string employer_address = 27;
  string language_code = 28;
  int64 created_at = 29;
  bool user_not_found = 30;
  string public_key_0 = 31;
  bool mail_notifications = 32;
  bool show_memos = 33;
}

message UpdateUserProfileRequest {
  BaseRequest base = 1;
  int64 id = 2;
  string forename = 3;
  string lastname = 4;
  string salutation = 5;
  string address = 6;
  string zip_code = 7;
  string city = 8;
  string state = 9;
  string country_code = 10;
  string nationality = 11;
  string mobile_nr = 12;
  int64 birth_day = 13;
  string birth_place = 14;
  string additional_name = 15;
	string birth_country_code = 16;
	string bank_account_number = 17;
	string bank_number = 18;
	string bank_phone_number = 19;
	string tax_id = 20;
	string tax_id_name = 21;
  string occupation_name = 22;
  string occupation_code08 = 23;
  string occupation_code88 = 24;
	string employer_name = 25;
	string employer_address = 26;
  string language_code = 27;
}

message UserDetailsResponse {
  int64 id = 1;
  bool mail_confirmed = 2;
  string mail_confirmation_key = 3;
  int64 mail_confirmation_expiry = 4;
  string tfa_secret = 5;
  bool tfa_confirmed = 6;
  bool mnemonic_confirmed = 7;
  string email = 9;
  int64 message_count = 10;
  bool user_not_found = 11;
  string tfa_temp_secret = 12;
  bool reset2fa_by_admin =  13;
  string public_key_0 = 14;
  string payment_state = 15;
  bool mail_notifications = 16;
  bool is_suspended = 17;
  bool is_closed = 18;
  bool show_memos = 19;
}

message ExistsEmailRequest {
  BaseRequest base = 1;
  string email = 2;
}

message ExistsEmailResponse {
  bool exists = 1;
}

message Country {
  string code = 1;
  string name = 2;
}

message CountryListResponse {
  repeated Country countries = 1;
}

message SalutationListResponse {
  repeated string salutation = 1;
}

message LanguageListResponse {
  repeated Language languages = 1;
}

message Language {
  string code = 1;
  string name = 2;
}

message OccupationListResponse {
  repeated Occupation occupations = 1;
}

message Occupation {
  int64 code08 = 1;
  int64 code88 = 2;
  string name = 3;
}

message OccupationListRequest {
  BaseRequest base = 1;
  string name = 2;
  int64 limit_count = 3;
}

message UserMailTokenRequest {
  BaseRequest base = 1;
  string token = 2;
}
message UserMailTokenResponse {
  int64 user_id = 1;
  int64 mail_confirmation_expiry = 2;
  string email = 3;
  bool token_not_found = 4;
  bool token_already_confirmed = 5;
  bool mail_confirmed = 6;
  int64 confirmed_date = 7;
  string public_key_0 = 8;
}

message UserSecurityRequest {
  BaseRequest base = 1;
  int64 id = 2;
  int64 user_id = 3;
  string kdf_salt = 4;
  string mnemonic_master_key = 5;
  string mnemonic_master_iv = 6;
  string wordlist_master_key = 7;
  string wordlist_master_iv = 8;
  string mnemonic = 9;
  string mnemonic_iv = 10;
  string wordlist = 11;
  string wordlist_iv = 12;
  string public_key_0 = 13;
  bool user_not_found = 15;
}

message UserSecurityResponse {
  int64 id = 1;
  int64 user_id = 2;
  string kdf_salt = 3;
  string mnemonic_master_key = 4;
  string mnemonic_master_iv = 5;
  string wordlist_master_key = 6;
  string wordlist_master_iv = 7;
  string mnemonic = 8;
  string mnemonic_iv = 9;
  string wordlist = 10;
  string wordlist_iv = 11;
  string public_key_0 = 12;
  bool user_not_found = 14;
}

message SetMailTokenRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  string mail_confirmation_key =3;
  int64 mail_confirmation_expiry =4;
}

message SetUserTfaConfirmedRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  string tfa_secret = 3;
  bytes tfa_qrcode = 4;
  string tfa_url = 5;
}

message SetTempTfaSecretRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  string tfa_secret = 3;
}

message JwtSetKeyRequest {
  BaseRequest base = 1;
  string key = 2;
  string value1 = 3;
  string value2 = 4;
  int64 expiry1 = 5;
  int64 expiry2 = 6;
}

message SaveMailRequest {
  BaseRequest base = 1;
  string mail_from = 2;
  string mail_to = 3;
  string mail_subject = 4;
  string mail_body = 5;
  string external_status = 6;
  string external_status_id = 7;
  int64 internal_status = 8;
}


message UserMessageListRequest{
  BaseRequest base = 1;
  int64 user_id = 2;
  bool archive = 3;
}
message UserMessageRequest{
  BaseRequest base = 1;
  int64 message_id = 3;
  bool archive = 4;
}

message UserMessageItem {
  int64 id = 1;
  int64 user_id = 2;
  string title = 3;
  string message = 4;
  int64 date_created = 5;
}

message UserMessageListResponse {
  repeated UserMessageItem message_list_items = 1;
  int64 current_count = 2;
  int64 archive_count = 3;
}

message AddWalletRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  string public_key = 3;
  string wallet_name = 4;
  string friendly_id = 5;
  string domain = 6;
  bool show_on_homescreen = 7;
  WalletType wallet_type = 8;
}

message WalletChangeNameRequest {
  BaseRequest base = 1;
  int64 id = 2;
  int64 user_id = 3;
  string name = 4;
}

message WalletChangeOrderRequest {
  BaseRequest base = 1;
  string public_key = 2;
  int64 order_nr = 3;
  int64 user_id = 4;
}

message WalletSetHomescreenRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  int64 id = 3;
  bool visible = 4;
}

message WalletChangeFederationAddressRequest {
  BaseRequest base = 1;
  int64 id = 2;
  int64 user_id = 3;
  string friendly_id = 4;
  string domain = 5;
}

message CheckWalletRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  string wallet_name = 3;
  string friendly_id = 4;
  string domain = 5;
  string public_key = 6;
}

message CheckWalletResponse {
  bool name_ok = 1;
  bool federation_address_ok = 2;
  bool public_key_ok = 3;
}

message Wallet {
  int64 id = 1;
  int64 user_id = 2;
  string public_key = 3;
  string wallet_name = 4;
  string friendly_id = 5;
  string domain = 6;
  bool show_on_homescreen = 7;
  WalletType wallet_type = 8;
  int64 order_nr = 9;
}

message GetWalletsRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
}

message GetWalletsResponse {
  repeated Wallet wallets = 1;
}

message RemoveWalletRequest {
  BaseRequest base = 1;
  int64 id = 2;
  int64 user_id = 3;
}

message GetWalletRequest {
  BaseRequest base = 1;
  int64 wallet_id = 2;
  int64 user_id = 3;
}

message GetWalletByPublicKeyRequest {
  BaseRequest base = 1;
  string public_key = 2;
}

message WalletIsLastRequest {
  BaseRequest base = 1;
  int64 id = 2;
  int64 user_id = 3;
}

message AddPaymentTemplateRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  int64 wallet_id = 3;
  string recipient_stellar_address = 4;
  string recipient_publickey = 5;
  string asset_code = 6;
  string issuer_publickey = 7;
  string amount = 8;
  string memoType = 9;
  string memo = 10;
  string template_name = 11;
}

message RemovePaymentTemplateRequest {
  BaseRequest base = 1;
  int64 id = 2;
  int64 user_id = 3;
}

message GetTemplatesRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  int64 wallet_id = 3;
}

message PaymentTemplate {
  int64 id = 1;
  int64 wallet_id = 2;
  string recipient_stellar_address = 3;
  string recipient_publickey = 4;
  string asset_code = 5;
  string issuer_publickey = 6;
  string amount = 7;
  string memoType = 8;
  string memo = 9;
  string template_name = 10;
}

message GetTemplatesResponse {
  repeated PaymentTemplate templates = 1;
}

message QueuePushNotificationRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  string push_token = 3;
  string content = 4;
  NotificationType deviceType = 5;
}

message QueueMailNotificationRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  string content = 3;
  string subject = 4;
  EmailContentType mail_type = 5;
  string user_email = 6;
}

message DequeueRequest {
  BaseRequest base = 1;
  int64 limit_count = 2;
}

message NotificationListResponse {
  repeated Notification notifications = 1;
}

message UpdateNotificationsStatusRequest{
  BaseRequest base = 1;
  repeated NotificationArchive notifications = 2;
}

message Notification {
  int64 id = 1;
  int64 user_id = 2;
  NotificationType notification_type = 3;
  string push_token = 4;
  string content = 5;
  string mail_subject = 6;
  EmailContentType mail_type = 7;
  string user_email = 8;
}

message NotificationArchive {
  int64 id = 1;
  NotificationStatusCode status = 2;
  string internal_error = 3;
  string external_status = 4;
  string external_error = 5;
}

message AddPushTokenRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  DeviceType device_type = 3;
  string push_token = 4;
}

message AddUserContactRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  string contact_name = 3;
  string stellar_address = 4;
  string public_key = 5;
}

message AddKycDocumentRequest{
  BaseRequest base = 1;
  int64 user_id = 2;
  DocumentType document_type = 3;
  DocumentFormat document_format = 4;
  DocumentSide document_side = 5;
  string id_country_code = 6;
  int64 id_issue_date = 7;
  int64 id_expiration_date = 8;
  string id_number = 9;
}

message AddKycDocumentResponse {
  int64 document_id = 1;
}

message GetPushTokensResponse {
  repeated PushToken pushTokens = 1;
}

message PushToken {
  DeviceType device_type = 1;
  string push_token = 2;
}

message DeletePushTokenRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  string push_token = 3;
}

message UpdatePushTokenRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  DeviceType device_type = 3;
  string old_push_token = 4;
  string new_push_token = 5;
}

message HasPushTokensResponse {
  bool has_push_tokens = 1;
}

message UpdateUserContactRequest {
  BaseRequest base = 1;
  int64 id = 2;
  string contact_name = 3;
  string stellar_address = 4;
  string public_key = 5;
}

message GetUserContactsResponse {
  repeated UserContact userContacts = 1;
}

message UserContact {
  int64 id = 1;
  string contact_name = 2;
  string stellar_address = 3;
  string public_key = 4;
}

message GetStellarTransactionsRequest {
  BaseRequest base = 1;
  string stellar_account_pk = 2;
  int64 start_timestamp = 3;
  int64 end_timestamp = 4;
}

message StellarOperation {
  string tx_transaction_hash = 1;
  int64 tx_created_at = 2;
  string tx_memo_type = 3;
  string tx_memo = 4;

  int64 op_id = 5;
  int64 op_application_order = 6;
  int64 op_type = 7;
  string op_details = 8;

  int64 tx_operation_count = 9;
  int64 tx_fee_paid = 10;
  string tx_account = 11;
}

message StellarOperations {
  repeated StellarOperation operations = 1;
}

message UpdateProfileShowMemoRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
  bool value = 3;
}

message UserLockoutRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
}

message UserLockoutResponse {
  int64 lockout_minutes = 1;
}

message UserLockinRequest {
  BaseRequest base = 1;
  int64 user_id = 2;
}

service DBService {
  rpc LockoutUser (UserLockoutRequest) returns (UserLockoutResponse) {}
  rpc GetLockoutUser (UserLockoutRequest) returns (UserLockoutResponse) {}
  rpc LockinUser (UserLockinRequest) returns (Empty) {}

  rpc GetUserDetails (GetUserByIDOrEmailRequest) returns (UserDetailsResponse) {}
  rpc GetUserSecurities (IDRequest) returns (UserSecurityResponse) {}
  rpc SetUserSecurities (UserSecurityRequest) returns (Empty) {}
  rpc SetTempTfaSecret (SetTempTfaSecretRequest) returns (Empty) {}
  rpc UpdateUserSecurity (UserSecurityRequest) returns (Empty) {}
  rpc CreateUser (CreateUserRequest) returns (IDResponse) {}
  rpc ExistsEmail (ExistsEmailRequest) returns (ExistsEmailResponse) {}
  rpc GetCountryList (Empty) returns (CountryListResponse) {}
  rpc GetSalutationList (IDString) returns (SalutationListResponse) {}
  rpc GetLanguageList (Empty) returns (LanguageListResponse) {}
  rpc GetOccupationList (OccupationListRequest) returns (OccupationListResponse) {}

  rpc GetUserByMailtoken (UserMailTokenRequest) returns (UserMailTokenResponse) {}
  rpc SetUserMailToken (SetMailTokenRequest) returns (Empty) {}
  rpc GetUserProfile (IDRequest) returns (UserProfileResponse) {}
  rpc UpdateUserProfile (UpdateUserProfileRequest) returns (Empty) {}
  rpc UpdateUserShowMemos (UpdateProfileShowMemoRequest) returns (Empty) {}

  rpc SetUserMailConfirmed (IDRequest) returns (Empty) {}
  rpc SetUserMnemonicConfirmed (IDRequest) returns (Empty) {}
  rpc SetUserTFAConfirmed (SetUserTfaConfirmedRequest) returns (Empty) {}

  rpc GetAllJwtKeys (Empty) returns (KeyListResponse) {}
  rpc SetJwtKey (JwtSetKeyRequest) returns (Empty) {}
  rpc SaveMail (SaveMailRequest) returns (Empty) {}
  rpc GetUserMessages (UserMessageListRequest) returns (UserMessageListResponse) {}
  rpc GetUserMessage (UserMessageRequest) returns (UserMessageItem) {}
  rpc MoveMessageToArchive (IDRequest) returns (Empty) {}

  rpc CheckWalletData (CheckWalletRequest) returns (CheckWalletResponse) {}
  rpc AddWallet (AddWalletRequest) returns (IDResponse) {}
  rpc RemoveWallet (RemoveWalletRequest) returns (Empty) {}
  rpc GetWallet (GetWalletRequest) returns (Wallet) {}
  rpc GetWalletByPublicKey (GetWalletByPublicKeyRequest) returns (Wallet) {}
  rpc WalletChangeName (WalletChangeNameRequest) returns (Empty) {}
  rpc WalletChangeOrder (WalletChangeOrderRequest) returns (Empty) {}
  rpc WalletChangeFederationAddress (WalletChangeFederationAddressRequest) returns (Empty) {}
  rpc GetUserWallets (GetWalletsRequest) returns (GetWalletsResponse) {}
  rpc WalletIsLast (WalletIsLastRequest) returns (BoolResponse) {}
  rpc WalletSetHomescreen (WalletSetHomescreenRequest) returns (Empty) {}
  rpc AddPaymentTemplate (AddPaymentTemplateRequest) returns (IDResponse) {}
  rpc GetPaymentTemplates (GetTemplatesRequest) returns (GetTemplatesResponse) {}
  rpc RemovePaymentTemplate (RemovePaymentTemplateRequest) returns (Empty) {}
  rpc AddKycDocument(AddKycDocumentRequest) returns (AddKycDocumentResponse) {}

  rpc AddPushToken(AddPushTokenRequest) returns (Empty) {}
  rpc DeletePushToken(DeletePushTokenRequest) returns (Empty) {}
  rpc GetPushTokens(IDRequest) returns (GetPushTokensResponse) {}
  rpc UpdatePushToken(UpdatePushTokenRequest) returns (Empty) {}
  rpc HasPushTokens(IDRequest) returns (HasPushTokensResponse) {}

  rpc QueuePushNotification(QueuePushNotificationRequest) returns (Empty) {}
  rpc QueueMailNotification(QueueMailNotificationRequest) returns (Empty) {}
  rpc DequeueNotifications(DequeueRequest) returns (NotificationListResponse) {}
  rpc UpdateNotificationsStatus(UpdateNotificationsStatusRequest) returns (Empty) {}

  rpc AddUserContact(AddUserContactRequest) returns (IDResponse) {}
  rpc UpdateUserContact(UpdateUserContactRequest) returns (Empty) {}
  rpc DeleteUserContact(IDRequest) returns (Empty) {}
  rpc GetUserContacts(IDRequest) returns (GetUserContactsResponse) {}

  rpc GetStellarTransactions(GetStellarTransactionsRequest) returns (StellarOperations) {}
}